--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,10 @@
     "repos":  [
                   {
                       "name":  "dev-bootstrap",
+                      "url":  "https://github.com/TheWizardDJ/dev-bootstrap.git"
+                  },
+                  {
+                      "name":  "dev-bootstrap",
                       "url":  "https://github.com/TheWizardDJ/dev-bootstrap.git",
                       "path":  "C:\\\\Codex\\\\dev-bootstrap"
                   },
