--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,10 @@
                       "path":  "C:\\\\Codex\\\\dev-bootstrap"
                   },
                   {
+                      "name":  "DiscordEventEnrollBot",
+                      "url":  "https://github.com/TheWizardDJ/DiscordEventEnrollBot.git"
+                  },
+                  {
                       "name":  "HitSmartZBot",
                       "url":  "https://github.com/TheWizardDJ/HitSmartZBot.git"
                   },
